--- a/style.css
+++ b/style.css
@@ -323,6 +323,7 @@ section{
     .contanier{
         display: block;
         text-align: center;
+        padding: 70px 45px;
     }
     .contanier1{
         display: flex;
@@ -330,10 +331,12 @@ section{
         justify-content: center;
         text-align: center;
         align-items: center;
+        padding: 70px 45px;
     }
  .grid1{
     position: relative;
     padding: 0;
+    z-index: 2;
  }
 .grid1 h1{
     font-size: 40px;
@@ -342,33 +345,41 @@ section{
 .grid1 h3{
     margin-top: 1rem;
     color: #fff;
-    font-weight: 200;
-    font-size: 18px;
+    font-weight: 300;
+    font-size: 1.3rem;
     line-height: 1.3em;
 }
 
 .grid2{
     height: 60vh;
+    width: 100%;
+    max-width: 600px;
     position: relative;
     overflow: hidden;
     padding: 0;
+    margin: -30px auto;
+    z-index: 1;
 }
 .grid2 img{
     position: absolute;
-    width: 80%;
+    width: 100%;
     overflow: hidden;
+    z-index: 4;
 }
 .grid2 video{
-     margin-top: 11%;
-     margin-left: 11%;
-     width: 61%;
+   width: 100%;
+   max-height: 55%;
+   height: 100%;
      overflow: hidden;
-     
+     max-width: 600px;
+    margin: auto;
+    transform: translate(0%, 40%);
+    z-index: 3;
 }
 .grid12{
    position: relative;
     height: 20vh;
-    margin-top: 2rem;
+    max-width: 600px; 
 }
 .grid12 h1{
     font-size: 40px;
@@ -378,8 +389,8 @@ section{
 }
 .grid12 h3{
     color: #fff;
-    font-weight: 300;
-    font-size: 18px;
+    font-weight: 400;
+    font-size: 1.3rem;
     line-height: 1.3em;
     padding: 0;
     width: 100%;
@@ -416,7 +427,7 @@ section{
     margin-right: 1.1rem;
 }
 .card img:last-child{
-    width: 3 em;
+    width: 3em;
     height: 3em;
     position: absolute;
     right: 0;
