--- a/style.css
+++ b/style.css
@@ -12,12 +12,10 @@ body{
     background-size: cover;
     height: 95vh;  
     width: 100%;
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: -5.5%;
 }
 .background::after{
     content: " ";
@@ -42,7 +40,7 @@ select{
 }
 .navbar{
     display: flex;   
-    position: relative;
+    position: absolute;
    justify-content: space-between;
    z-index: 2;
 }
@@ -166,6 +164,23 @@ section{
      width: 61%;
      overflow: hidden;
 }
+.grid23{
+    height: 60vh;
+    position: relative;
+    overflow: hidden;
+    padding-left: 1rem;
+}
+.grid23 img{
+    position: absolute;
+    width: 80%;
+    overflow: hidden;
+}
+.grid23 video{
+     margin-top: 11%;
+     margin-left: 11%;
+     width: 61%;
+     overflow: hidden;
+}
 .grid12{
     display: flex;
     flex-direction: column;
@@ -192,7 +207,34 @@ section{
 }
 .grid11 img{
     width: 80%;
+    overflow: hidden;
+}
+.grid123{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     height: 60vh;
+}
+.grid123 h1{
+    font-size: 48px;
+    font-weight: 550;
+}
+.grid123 h3{
+    margin-top: 1rem;
+    color: #fff;
+    font-weight: 300;
+    font-size: 26px;
+    line-height: 1.3em;
+}
+.grid132{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+}
+.grid132 img{
+    width: 80%;
     overflow: hidden;
 }
 .card{
@@ -217,7 +259,7 @@ section{
     margin-right: 1.1rem;
 }
 .card img:last-child{
-    width: 3 em;
+    width: 3em;
     height: 3em;
     position: absolute;
     right: 0;
@@ -324,6 +366,7 @@ section{
         display: block;
         text-align: center;
         padding: 70px 45px;
+       
     }
     .contanier1{
         display: flex;
@@ -337,7 +380,7 @@ section{
     position: relative;
     padding: 0;
     z-index: 2;
- }
+     }
 .grid1 h1{
     font-size: 40px;
     font-weight: 550;
@@ -357,7 +400,7 @@ section{
     position: relative;
     overflow: hidden;
     padding: 0;
-    margin: -30px auto;
+    margin:  auto;
     z-index: 1;
 }
 .grid2 img{
@@ -376,37 +419,97 @@ section{
     transform: translate(0%, 40%);
     z-index: 3;
 }
+.grid23{
+    height: 60vh;
+    width: 100%;
+    max-width: 600px;
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+    margin:  auto;
+    z-index: 1;
+}
+.grid23 img{
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    z-index: 4;
+    margin-top: 20px;
+}
+.grid23 video{
+   width: 100%;
+   max-height: 50%;
+   height: 100%;
+     overflow: hidden;
+     max-width: 600px;
+    margin: auto;
+    transform: translate(0%, 30%);
+    z-index: 3;
+}
 .grid12{
    position: relative;
     height: 20vh;
-    max-width: 600px; 
 }
 .grid12 h1{
-    font-size: 40px;
+    font-size: 38px;
     font-weight: 550;
     padding: 0;
     width: 100%;
 }
 .grid12 h3{
     color: #fff;
-    font-weight: 400;
-    font-size: 1.3rem;
+    font-weight: 300;
+    font-size: 1.26rem;
     line-height: 1.3em;
     padding: 0;
     width: 100%;
 }
 .grid11{
-    padding: 0;
-    height: 66vh;
+    height: 60vh;
+    max-width: 600px;
+    margin: 0 auto;
     width: 100%;
+    position: relative;
 }
 .grid11 img{
-    width: 70%;
+    width: 100%;
+    height: 100%;
     overflow: hidden; 
-    padding: 0%;
+    position: relative;
 }
-.card{
-    width: 45%;
+.grid123{
+    position: relative;
+     height: 10vh;
+ }
+ .grid123 h1{
+     font-size: 38px;
+     font-weight: 550;
+     padding: 0;
+     width: 100%;
+ }
+ .grid123 h3{
+     color: #fff;
+     font-weight: 300;
+     font-size: 1.26rem;
+     line-height: 1.3em;
+     padding: 0;
+     width: 100%;
+ }
+ .grid132{
+     height: 60vh;
+     max-width: 600px;
+     margin: 0 auto;
+     width: 100%;
+     position: relative;
+ }
+ .grid132 img{
+     width: 100%;
+     height: 100%;
+     overflow: hidden; 
+     position: relative;
+ }
+ .card{
+    width: 60%;
     display: flex;
     align-items: center;
     height: 8vh;
@@ -415,7 +518,7 @@ section{
     border-radius: 10px;
     padding: 1rem;
     position: relative;
-    margin-top: -16%;
+    margin-top: -21%;
 }
 .card-content{
     position: absolute;
