--- a/style.css
+++ b/style.css
@@ -10,12 +10,11 @@ body{
 .background{
     background:  url(assets/1.jpg) no-repeat center;
     background-size: cover;
-    height: 95vh;  
+    height: 93vh;  
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    position: relative;
 }
 .background::after{
     content: " ";
@@ -24,32 +23,38 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    height: 95vh;
+    height: 93vh;
     z-index: 1;
-    box-shadow: 80px 100px 250px inset rgba(0, 0, 0, 0.459) , -80px -100px 250px inset rgba(0, 0, 0, 0.459);
-    
+    box-shadow: 80px 100px 250px inset rgba(0, 0, 0, 0.712) , -80px -100px 250px inset rgba(0, 0, 0, 0.712);  
 }
 select{
     background-color: #000;
-    padding: 10px 24px 10px 24px;
+    padding-left: 1.375rem;
+    padding-right: 1.375rem;
+    height: 30px;
+    white-space: nowrap;
+    overflow: hidden;
+    white-space: nowrap;
     position: relative;
     appearance: none;
     background: url(assets/8.png) no-repeat;
     background-position: right 0.4em center;
     background-size: 15px;
+    margin-top: -10px;
 }
 .navbar{
-    display: flex;   
-    position: absolute;
+   display: flex;   
    justify-content: space-between;
+   align-items: center;
    z-index: 2;
+  
 }
 #logo{
-    width: 180px;
+    width: 12rem;
     float: left;
-    height: 80px;
-    padding: 0%;
-   margin-left: 30px;
+    height: 5rem;
+    padding-top: 0.5rem;
+   margin-left: 40px; 
 }
 nav{
     float: right;
@@ -64,25 +69,37 @@ nav ul li{
     list-style: none;
     margin: 20px 0 0 20px;
     font-size: 16px;
+    right: 20px;
+}
+nav ul li a{
+    line-height: normal;
+    padding: 7px 17px;
+    font-weight: 400;
+    font-size: 1rem;
+    text-decoration: none;
+    background-color: #e50914;
+    border-radius: 3px;
 }
 .content{
     z-index: 2;
     position: relative;
     text-align: center;
+    max-width: 700px;
+    margin: auto;
 } 
 .content h1{
-   font-size: 50px;
-   font-weight: 600;
+   font-size: 46px;
+   font-weight: 900;
 }
 .content p:nth-child(2){
     margin-top: 1.4rem;
-    font-size: 1.8rem;
-    font-weight: 400;
+    font-size: 1.4rem;
+    font-weight: 600;
 }
 .content p:nth-child(3){
-    margin-top: 1.4rem;
+    margin-top: 1.6rem;
     font-size: 1.2rem;
-    font-weight: 100;
+    font-weight: 500;
 }
 form{
    display: flex;
@@ -94,16 +111,17 @@ form{
     width: 100%;
     height: 3rem;
     font-size: 1rem;
+    font-weight: 600;
 }
 .box4{
     margin-top: 20px;
     width: 50%;
     height: 3.2rem;
-    background: #FF0000;
+    background: #e50914;
     color: #fff;
     font-size: 1.5rem;
     border-style: none;
-    font-weight: 300;
+    font-weight: 600;
     margin-right: -20px;
     text-align: center;
     display: flex;
@@ -315,11 +333,16 @@ section{
     display: block;
     text-align: center;
     margin-top: 5rem;
-    font-size: 1.4rem;
+    
+}
+.membership-section p{
+    font-size: 1.1rem;
+    font-weight: 600;
 }
 .membership-section form{
     max-width: 650px;
     margin:auto;
+    font-size: 1.4rem;
 }
 .footer{
     display: block;
@@ -535,4 +558,47 @@ section{
     position: absolute;
     right: 0;
 }
+}
+@media screen and (min-width: 550px) and (max-width: 950px)  {
+    .content{
+        z-index: 2;
+        position: relative;
+        text-align: center;
+        max-width: 500px;
+        margin: auto;
+    } 
+    form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     }
+     .box3{
+        margin-top: 20px;
+        padding-left: 10px;
+        margin-left: -20px;
+        width: 100%;
+        height: 3rem;
+        font-size: 1rem;
+        font-weight: 600;
+    }
+    .box4{
+        margin-top: 20px;
+        width: 30%;
+        height: 2.5rem;
+        background: #e50914;
+        color: #fff;
+        font-size: 1rem;
+        border-style: none;
+        font-weight: 300;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .box4 i{
+        display: inline;
+        vertical-align: middle;
+        font-size: 2rem;
+        font-weight: 300;
+    }
 }
